--- a/index.htm
+++ b/index.htm
@@ -12,8 +12,14 @@
   </head>
   <body>
     <h1>Highcharts playground</h1>
+    <h2>Basic bar chart</h2>
+    <div id="bar-chart" style="width:100%; height:400px;"></div>
 
-    <div id="container" style="width:100%; height:400px;"></div>
+    <h2>Basic area chart</h2>
+    <div id="area-chart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+
+    <h2>Column chart</h2>
+    <div id="column-chart" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto"></div>
 
   </body>
 </html>
